--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ image_config: &image_config
 
   IMAGE_NAME: esp32-ci
 
-  IMAGE_TAG: $CIRCLE_SHA1
+  # IMAGE_TAG: $CIRCLE_SHA1
 
   # NOTE: if you're modifying this config.yml file manually
   # rather than using the included setup script,
@@ -45,7 +45,7 @@ jobs:
 
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
-      - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
+      - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$CIRCLE_SHA1 .
 
       - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
 
