--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,25 +60,8 @@ jobs:
 
     steps:
       - checkout
+      - run: xtensa-esp32-elf-gcc --version
 
-      - run:
-          name: start Xvfb for phantomjs test
-          # command: Xvfb :99
-          # background: true
-
-      - run:
-          name: bats tests
-          command: |
-            mkdir -p test_results/bats
-            bats scripts/tests.bats | \
-            perl scripts/tap-to-junit.sh > \
-            test_results/bats/results.xml
-
-      - store_test_results:
-          path: test_results
-
-      - store_artifacts:
-          path: test_results
 
 workflows:
   version: 2
